--- a/build-a-basic-web-application/Enabling_Go_Modules/templates/base.layout.html
+++ b/build-a-basic-web-application/Enabling_Go_Modules/templates/base.layout.html
@@ -1,23 +1,28 @@
+{{define "base"}}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Home</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
 		/>
-		<title>Home</title>
+
+		{{block "css" .}}
+
+		{{
+			end
+		}}
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h1>This is Home page.</h1>
-					<p>This is some text.</p>
-				</div>
-			</div>
-		</div>
+		{{block "content" .}}
+
+		{{ end }}
+
+		{{block "js" .}}
 	</body>
 </html>
+{{ end }}
